tests/good/first_argument_variadic.rat
/// out: "3"


class Test {
    def new(self) {}
    def func(self, *a) => a
}

print(len(Test().func(1,2,3)))
