tests/bad/function_same_name_arguments.rat
/// fail: Duplicate argument name

def func(args, *args, **args) {}
